--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.6.3",
+    "react-app-rewire-less": "^2.1.0",
     "react-app-rewired": "^1.3.8"
   }
 }
