--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "antd": "^3.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.6.3",
     "react-app-rewire-less": "^2.1.0",
-    "react-app-rewired": "^1.3.8"
+    "react-app-rewired": "^1.3.8",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
