--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "styled-components": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
