--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "antd": "^3.0.1",
     "history": "^4.7.2",
+    "install": "^0.10.2",
+    "npm": "^5.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -12,6 +14,8 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.17",
+    "react-throttle": "^0.3.0",
+    "react-window-size-listener": "^1.0.10",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "styled-components": "^2.3.0"
