--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.0.1",
+    "firebase": "^4.8.1",
     "history": "^4.7.2",
     "install": "^0.10.2",
+    "moment": "^2.20.1",
     "npm": "^5.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
