--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-throttle": "^0.3.0",
     "react-window-size-listener": "^1.0.10",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.3.0"
   },
   "scripts": {
